fix: creation guide block for scrollbar size

--- a/src/css/weekday.styl
+++ b/src/css/weekday.styl
@@ -60,6 +60,13 @@
             wh(27px, 27px)
             line-height: 27px
             text-align: center
+
+    .creation
+        pos(0, 0)
+        wh(100%, 100%)
+        position: absolute
+        overflow-y: scroll
+
     .events
         pos(0, 0)
         wh(100%, 100%)
